# -LEGACY-IACore

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yaml
CMake/: FindDeps.cmake  IAProjectConfig.cmake
CMake/Toolchains/: linux-arm64.cmake  wasm32-emscripten-clang.cmake  windows-arm64.cmake  windows-x64.cmake  x64-linux-clang.cmake  x64-windows.cmake
CMake/Triplets/: arm64-linux-neon.cmake  arm64-linux.cmake  arm64-windows.cmake  wasm32-emscripten-simd.cmake  wasm32-emscripten.cmake  x64-linux-avx2.cmake  x64-linux.cmake  x64-windows.cmake
Docs/: BUILDING.md  USING.md
Src/IACore/: CMakeLists.txt
Src/IACore/imp/cpp/: AsyncOps.cpp  CLI.cpp  DataOps.cpp  FileOps.cpp  HttpClient.cpp  IACore.cpp  IPC.cpp  JSON.cpp  Logger.cpp  Platform.cpp  ProcessOps.cpp  SIMD.cpp  SocketOps.cpp  StreamReader.cpp  StreamWriter.cpp  StringOps.cpp  Utils.cpp  XML.cpp
Src/IACore/imp/cpp/Http/: Client.cpp  Common.cpp  Server.cpp
Src/IACore/inc/IACore/: AsyncOps.hpp  CLI.hpp  DataOps.hpp  DynamicLib.hpp  Environment.hpp  FileOps.hpp  IACore.hpp  IATest.hpp  IPC.hpp  JSON.hpp  Logger.hpp  PCH.hpp  Platform.hpp  ProcessOps.hpp  SIMD.hpp  SocketOps.hpp  StreamReader.hpp  StreamWriter.hpp  StringOps.hpp  Utils.hpp  XML.hpp
Tests/Unit/: AsyncOps.cpp  CLI.cpp  CMakeLists.txt  DataOps.cpp  Environment.cpp  FileOps.cpp  IPC.cpp  JSON.cpp  Logger.cpp  Main.cpp  Platform.cpp  ProcessOps.cpp  RingBuffer.cpp  SocketOps.cpp  StreamReader.cpp  StreamWriter.cpp  StringOps.cpp  Utils.cpp  XML.cpp
Tests/Unit/SIMD/: FloatVec4.cpp  IntVec4.cpp
(+4 files in other folders)
